--- a/app/src/main/res/layout/activity_supplier_register.xml
+++ b/app/src/main/res/layout/activity_supplier_register.xml
@@ -1,9 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="Activities.SupplierRegister">
+<?xml version="1.0" encoding="UTF-8"?>
+
+    <androidx.constraintlayout.widget.ConstraintLayout tools:context="Activities.ClientRegister" android:background="@drawable/city" android:layout_gravity="center" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/city" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/SignUp" app:layout_constraintVertical_bias="0.043" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:textSize="36sp" android:text="Register" android:gravity="center" android:fontFamily="@font/alfa_slab_one"/>
+
+    <Button android:layout_height="60dp" android:layout_width="136dp" android:id="@+id/signUpSupplier" app:layout_constraintVertical_bias="0.862" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="sign_up" android:fontFamily="@font/alfa_slab_one" app:backgroundTint="#00FFFFFF" android:layout_marginTop="132dp"/>
+
+    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/clientRegist" app:layout_constraintVertical_bias="0.948" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.521" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:textSize="14sp" android:text="have_an_account_sign_in" app:backgroundTint="#00FFFFFF"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/GmachNameInput" app:layout_constraintVertical_bias="0.125" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" tools:text="Enter your gmach name" android:text="Enter your gmach name" android:inputType="textPersonName" android:ems="10" android:autofillHints=""/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/EmailInput" app:layout_constraintVertical_bias="0.22" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Email" android:inputType="textEmailAddress" android:ems="10" android:autofillHints="" tools:ignore="MissingConstraints"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/PasswordInput" app:layout_constraintVertical_bias="0.295" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Password" android:inputType="textPassword" android:ems="10" android:autofillHints="" tools:ignore="MissingConstraints"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/PhoneNumberInput" app:layout_constraintVertical_bias="0.381" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Phone Number" android:inputType="phone" android:ems="10" android:autofillHints="" tools:ignore="MissingConstraints"/>
+
+    <Spinner android:layout_height="41dp" android:layout_width="197dp" android:id="@+id/CategoryInput" app:layout_constraintVertical_bias="0.553" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.467" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" tools:ignore="MissingConstraints"/>
+
+    <TextView android:layout_height="33dp" android:layout_width="281dp" android:id="@+id/textView5" app:layout_constraintVertical_bias="0.458" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.569" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:textSize="16sp" android:text="Choose the category of your gmach" android:gravity="center" android:layout_marginTop="18dp" android:textAllCaps="false" android:lineSpacingExtra="10sp"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/AddressInput" app:layout_constraintVertical_bias="0.655" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Address" android:inputType="textPersonName" android:ems="10"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/OpeningTimeInput" app:layout_constraintVertical_bias="0.746" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter opening time" android:layout_marginTop="24dp" android:inputType="textPersonName" android:ems="10"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
