add back to login and validate

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,7 +99,7 @@
 
 
     <Button
-        android:id="@+id/clientRegist"
+        android:id="@+id/LoginRegist"
         android:layout_width="221dp"
         android:layout_height="45dp"
         android:text="Register as client"
