menu bar in main, search results and private zone

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/main_logoutMenu"
-        android:orderInCategory="100"
-        app:showAsAction="always"
-        android:title="Logout">
-    </item>
 
     <item
         android:id="@+id/action_search"
@@ -14,5 +8,18 @@
         android:icon="@android:drawable/ic_menu_search"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView">
+    </item>
+
+    <item
+        android:id="@+id/personal_profile"
+        android:title="My profile"
+        app:showAsAction="never">
+    </item>
+
+    <item
+        android:id="@+id/main_logoutMenu"
+        android:title="Logout"
+        app:showAsAction="never">
+        <!--        android:orderInCategory="100"-->
     </item>
 </menu>
