--- a/app/src/main/res/layout/activity_client_register.xml
+++ b/app/src/main/res/layout/activity_client_register.xml
@@ -157,7 +157,7 @@
         app:layout_constraintVertical_bias="0.649" />
 
     <Button
-        android:id="@+id/clientRegist"
+        android:id="@+id/haveAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Have an Account? Sign In"
