--- a/app/src/main/res/layout/activity_supplier_register.xml
+++ b/app/src/main/res/layout/activity_supplier_register.xml
@@ -22,7 +22,21 @@
 
     <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/GmachNameInput" app:layout_constraintVertical_bias="0.125" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" tools:text="Enter your gmach name" android:text="Enter your gmach name" android:inputType="textPersonName" android:ems="10" android:autofillHints=""/>
 
-    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/EmailInput" app:layout_constraintVertical_bias="0.22" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Email" android:inputType="textEmailAddress" android:ems="10" android:autofillHints="" tools:ignore="MissingConstraints"/>
+    <EditText
+        android:id="@+id/EmailInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:text="Enter Email"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.22"
+        tools:ignore="MissingConstraints" />
 
     <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/PasswordInput" app:layout_constraintVertical_bias="0.295" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Password" android:inputType="textPassword" android:ems="10" android:autofillHints="" tools:ignore="MissingConstraints"/>
 
