--- a/app/src/main/res/layout/activity_update_detalis_supplier.xml
+++ b/app/src/main/res/layout/activity_update_detalis_supplier.xml
@@ -6,126 +6,110 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context="Activities.update_detalis_supplier">
 
-<TextView
-    android:id="@+id/updatetitel"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="What do you want to update?"
-    android:textSize="30dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.399"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.11" />
+    <TextView
+        android:id="@+id/updatetitel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="What do you want to update?"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.057" />
 
-<EditText
-    android:id="@+id/update_name"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="520dp"
-    android:autofillHints=""
-    android:ems="10"
-    android:inputType="textPersonName"
-    android:text="name"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.432"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/SignUp"
-    app:layout_constraintVertical_bias="0.395"
-    tools:text="name" />
+    <EditText
+        android:id="@+id/update_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="90dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/updatetitel"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="name" />
 
-<EditText
-    android:id="@+id/update_email"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:autofillHints=""
-    android:ems="10"
-    android:inputType="textEmailAddress"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.432"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/updae_password"
-    app:layout_constraintVertical_bias="0.092"
-    tools:ignore="MissingConstraints" />
+    <EditText
+        android:id="@+id/update_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="87dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="text|textEmailAddress"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/update_name"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints"
+        tools:text="email" />
 
-<EditText
-    android:id="@+id/updae_password"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="76dp"
-    android:autofillHints=""
-    android:ems="10"
-    android:inputType="textPassword"
-    android:text="Password"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.432"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/update_name"
-    app:layout_constraintVertical_bias="0.0"
-    tools:ignore="MissingConstraints" />
+    <EditText
+        android:id="@+id/update_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="phone"
+        android:text="Phone_number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/update_email"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints" />
 
-<EditText
-    android:id="@+id/update_phone"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="70dp"
-    android:autofillHints=""
-    android:ems="10"
-    android:inputType="phone"
-    android:text="Phone_number"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.398"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/update_email"
-    app:layout_constraintVertical_bias="0.0"
-    tools:ignore="MissingConstraints" />
+    <EditText
+        android:id="@+id/update_addres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="74dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Address"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/update_phone"
+        app:layout_constraintVertical_bias="0.0" />
 
-<EditText
-    android:id="@+id/update_addres"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="74dp"
-    android:ems="10"
-    android:inputType="textPersonName"
-    android:text="Address"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.432"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/update_phone"
-    app:layout_constraintVertical_bias="0.019" />
+    <EditText
+        android:id="@+id/update_open"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="69dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Opening time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/update_addres"
+        app:layout_constraintVertical_bias="0.017" />
 
-<EditText
-    android:id="@+id/update_open"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="69dp"
-    android:ems="10"
-    android:inputType="textPersonName"
-    android:text="Opening time"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.432"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/update_addres"
-    app:layout_constraintVertical_bias="0.113" />
-
-<Button
-    android:id="@+id/update_ok"
-    android:layout_width="137dp"
-    android:layout_height="50dp"
-    android:text="save"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.452"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/update_open"
-    app:layout_constraintVertical_bias="0.474" />
+    <Button
+        android:id="@+id/update_ok"
+        android:layout_width="137dp"
+        android:layout_height="50dp"
+        android:text="save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/update_open"
+        app:layout_constraintVertical_bias="0.27" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
