--- a/app/src/main/res/layout/activity_supplier_register.xml
+++ b/app/src/main/res/layout/activity_supplier_register.xml
@@ -1,63 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout tools:context="Activities.ClientRegister" android:background="@drawable/city" android:layout_gravity="center" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/city" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/city"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@drawable/city"
+    tools:context="Activities.ClientRegister"
+    android:orientation="vertical">
 
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/SignUp" app:layout_constraintVertical_bias="0.043" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:textSize="36sp" android:text="Register" android:gravity="center" android:fontFamily="@font/alfa_slab_one"/>
+    <TextView
+        android:id="@+id/SignUp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/alfa_slab_one"
+        android:gravity="center"
+        android:text="Register"
+        android:textSize="36sp" />
 
-    <Button android:layout_height="60dp" android:layout_width="136dp" android:id="@+id/signUpSupplier" app:layout_constraintVertical_bias="0.862" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="sign_up" android:fontFamily="@font/alfa_slab_one" app:backgroundTint="#00FFFFFF" android:layout_marginTop="132dp"/>
+    <EditText
+        android:id="@+id/GmachNameInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Enter your gmach name" />
+
+    <EditText
+        android:id="@+id/EmailInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:text="Enter Email" />
+
+    <EditText
+        android:id="@+id/PasswordInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="textPassword"
+        android:text="Enter Password" />
+
+    <EditText
+        android:id="@+id/PhoneNumberInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints=""
+        android:ems="10"
+        android:inputType="phone"
+        android:text="Enter Phone Number" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:lineSpacingExtra="10sp"
+        android:text="Choose the category of your gmach"
+        android:textAllCaps="false"
+        android:textSize="16sp" />
+
+    <Spinner
+        android:id="@+id/CategoryInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:lineSpacingExtra="10sp"
+        android:text="Choose the location in the country"
+        android:textAllCaps="false"
+        android:textSize="16sp" />
+
+    <Spinner
+        android:id="@+id/LocationInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/AddressInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Enter Address" />
+
+    <EditText
+        android:id="@+id/OpeningTimeInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Enter opening time" />
+    <Button
+        android:id="@+id/signUpSupplier"
+        android:layout_width="136dp"
+        android:layout_height="60dp"
+        android:fontFamily="@font/alfa_slab_one"
+        android:text="sign_up" />
 
     <Button
         android:id="@+id/LoginRegist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Have an Account? Sign In"
-        android:textSize="14sp"
-        app:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        android:textSize="14sp" />
 
-    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/GmachNameInput" app:layout_constraintVertical_bias="0.125" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" tools:text="Enter your gmach name" android:text="Enter your gmach name" android:inputType="textPersonName" android:ems="10" android:autofillHints=""/>
-
-    <EditText
-        android:id="@+id/EmailInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:text="Enter Email"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22"
-        tools:ignore="MissingConstraints" />
-
-    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/PasswordInput" app:layout_constraintVertical_bias="0.295" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Password" android:inputType="textPassword" android:ems="10" android:autofillHints="" tools:ignore="MissingConstraints"/>
-
-    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/PhoneNumberInput" app:layout_constraintVertical_bias="0.381" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Phone Number" android:inputType="phone" android:ems="10" android:autofillHints="" tools:ignore="MissingConstraints"/>
-
-    <Spinner
-        android:id="@+id/CategoryInput"
-        android:layout_width="244dp"
-        android:layout_height="52dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.567"
-        tools:ignore="MissingConstraints" />
-
-    <TextView android:layout_height="33dp" android:layout_width="281dp" android:id="@+id/textView5" app:layout_constraintVertical_bias="0.458" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.569" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:textSize="16sp" android:text="Choose the category of your gmach" android:gravity="center" android:layout_marginTop="18dp" android:textAllCaps="false" android:lineSpacingExtra="10sp"/>
-
-    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/AddressInput" app:layout_constraintVertical_bias="0.655" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter Address" android:inputType="textPersonName" android:ems="10"/>
-
-    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/OpeningTimeInput" app:layout_constraintVertical_bias="0.746" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:text="Enter opening time" android:layout_marginTop="24dp" android:inputType="textPersonName" android:ems="10"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
